2022-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Add messaging regarding building
	libxml2 and jasper.

2022-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (release): Generate ASCII armored ".asc" files
	directly since this seems to be prefered over converting from
	".bin" files.

2022-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Some people prefer GPG signature files in ASCII
	armored ".asc" format rather than the OpenPGP binary ".bin"
	format, so produce both.

2022-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Fix UTF-8 encoding errors in some text and source files.  A few
	more issues remain.  Assistance is appreciated.

2022-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (ReadSVGImage): Address concern from SourceForge
	issue #669 "Segmentation fault caused by null pointer dereference
	by checking return from xmlCreatePushParserCtxt().  Address
	oss-fuzz 48340 "graphicsmagick:coder_SVG_fuzzer:
	Heap-use-after-free in xmlParseInternalSubset" by disabling
	internal subset handling until the parser context handling is
	fixed.

2022-08-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the news.

2022-08-10    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * VisualMagick/configure/stdafx.h Added define WIN32_LEAN_AND_MEAN
        * VisualMagick/configure/configure.exe New rebuild.

2022-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * fuzzing/oss-fuzz-build.sh (MAGICK_LIBS): Add libsharpyuv.a to
        the list of libraries to check for.

2022-08-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac: When checking for libwmf, add a test for
        libsharpyuv.  Not yet tested but maybe it will work.

2022-08-07    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * VisualMagick\configure\configure.cpp: The /MACHINE:x86
        should never be placed to DLL dependency list.
